--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,7 +10,17 @@ li {
   list-style: none;
 }
 
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 /* MAIN */
+
+main {
+  background-image: url(/images/fondo-pag-speciali.jpg?06a79f19fbb4489a17e2dff67ce37137);
+}
 
 main section .cards {
   display: flex;
@@ -53,6 +63,16 @@ main section .cards .card .overlay h3 {
 
 header {
   text-align: center;
+}
+
+header nav {
+  display: flex;
+  justify-content: center;
+}
+
+header nav ul li {
+  float: left;
+  padding: 15px 10px;
 }
 
 /* FOOTER */
