--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,10 +16,25 @@ li {
   clear: both;
 }
 
+h2 {
+  text-transform: uppercase;
+  padding-bottom: 10px;
+}
+
 /* MAIN */
 
 main {
   background-image: url(/images/fondo-pag-speciali.jpg?06a79f19fbb4489a17e2dff67ce37137);
+}
+
+main .container {
+  width: 80vw;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+main section {
+  padding-bottom: 10px;
 }
 
 main section .cards {
@@ -28,9 +43,9 @@ main section .cards {
 }
 
 main section .cards .card {
-  flex-basis: calc(100% / 3 - 40px);
+  flex-basis: calc(100% / 3 - 5px);
   position: relative;
-  margin: 20px;
+  margin-right: 5px;
   overflow: hidden;
 }
 
