--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,6 +10,10 @@ li {
   list-style: none;
 }
 
+ul {
+  padding-left: 0;
+}
+
 .clearfix:after {
   content: "";
   display: table;
@@ -21,16 +25,21 @@ h2 {
   padding-bottom: 10px;
 }
 
+.container {
+  width: 80vw;
+  margin: 0 auto;
+  padding: 30px 0;
+}
+
+a {
+  text-decoration: none;
+  color: none;
+}
+
 /* MAIN */
 
 main {
   background-image: url(/images/fondo-pag-speciali.jpg?06a79f19fbb4489a17e2dff67ce37137);
-}
-
-main .container {
-  width: 80vw;
-  margin: 0 auto;
-  padding: 30px 0;
 }
 
 main section {
@@ -80,6 +89,10 @@ header {
   text-align: center;
 }
 
+header img {
+  width: 200px;
+}
+
 header nav {
   display: flex;
   justify-content: center;
@@ -91,4 +104,17 @@ header nav ul li {
 }
 
 /* FOOTER */
+
+footer .footer-blocks {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .spaced-list li {
+  padding-bottom: 10px;
+}
+
+footer .bottom-img img {
+  width: 100%;
+}
 
