--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -3,6 +3,10 @@ li {
 
 }
 
+ul {
+    padding-left: 0;
+}
+
 .clearfix:after {
     content: '';
     display: table;
@@ -12,4 +16,15 @@ li {
 h2 {
     text-transform: uppercase;
     padding-bottom: 10px;
+}
+
+.container {
+    width: 80vw;
+    margin: 0 auto;
+    padding: 30px 0;
+}
+
+a {
+    text-decoration: none;
+    color: none;
 }
