Finito responsive XS. Manca styling da per tutto

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -149,3 +149,29 @@ footer .bottom-img img {
   }
 }
 
+@media all and (max-width: 767px) {
+  header nav {
+    padding-bottom: 20px;
+  }
+
+  header nav ul {
+    display: none;
+  }
+
+  header nav .hamburger {
+    display: block;
+  }
+
+  main section .cards {
+    display: block;
+  }
+
+  footer .footer-blocks {
+    display: block;
+  }
+
+  footer section {
+    padding-bottom: 10px;
+  }
+}
+
