--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -9,7 +9,7 @@ header {
 
         display: flex;
         justify-content: center;
-        
+
 
         ul {
 
@@ -23,6 +23,10 @@ header {
             display: none;
             font-size: 20px;
         }
+    }
+
+    a {
+        color: black;
     }
 
 
