--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -1,6 +1,8 @@
 main {
 
-    background-image: url('../../../public/img/fondo-pag-speciali.jpg');
+    .fondo-prodotti {
+        background-image: url('../../../public/img/fondo-pag-speciali.jpg');
+    }
 
     section {
 
@@ -44,6 +46,31 @@ main {
             }
 
 
+        }
+    }
+
+    .prodotto {
+        background-color: #b8dae6;
+        padding: 40px 0;
+
+        h1 {
+            text-align: center;
+            color: $font_color_blue;
+        }
+
+        .img-block {
+            width: 60%;
+            margin: 0 auto;
+
+            img {
+                width: 100%;
+
+            }
+        }
+        p {
+            width: 80%;
+            margin: 0 auto;
+            color: $font_color_blue;
         }
     }
 }
